--- a/index.html
+++ b/index.html
@@ -8,8 +8,21 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-
-    <h1>Hello World, we are software developers!</h1>
+    <header id='header'>
+      <img id='header-img' src=''>
+      <nav id='nav-bar'>
+        <a class='nav-link' href='#'></a>
+        <a class='nav-link' href='#'></a>
+        <a class='nav-link' href='#'></a>
+      </nav>
+    </header>
+    <section>
+      <iframe id='video' src=''></iframe>
+      <form id='form' action='https://www.freecodecamp.com/email-submit'>
+        <input type='email' name='email' id='email' placeholder='Email ...'>
+        <input type='submit' value='submit' id='submit'>
+      </form>
+    </section>
 
     <!--
 
