--- a/index.html
+++ b/index.html
@@ -4,24 +4,34 @@
     <meta charset="UTF-8">
     <title>Fork Me! FCC: Test Suite Template</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </head>
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <header id='header'>
-      <img id='header-img' src=''>
-      <nav id='nav-bar'>
-        <a class='nav-link' href='#'></a>
-        <a class='nav-link' href='#'></a>
-        <a class='nav-link' href='#'></a>
+    <header id='header'>     
+      <nav id='nav-bar' class="nav">
+        <img id='header-img' src='https://assets.website-files.com/61ed56ae9da9fd7e0ef0a967/61f12e3a57bdb3717fbf9cec_Product_Default.svg'>
+        <div class="text-link">
+        <a class='nav-link ' href='#video'>Video</a>
+        <a class='nav-link ' href='#products'>Products</a>
+        <a class='nav-link ' href='#prices'>Prices</a>
+        </div>
       </nav>
     </header>
-    <section>
-      <iframe id='video' src=''></iframe>
+    <section id="main-section">
+      
+      <iframe id='video'  width="727" height="409" src="https://www.youtube.com/embed/zie_xSa2oRc" title="How To Sell A Product - Sell Anything To Anyone With This Unusual Method" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <form id='form' action='https://www.freecodecamp.com/email-submit'>
         <input type='email' name='email' id='email' placeholder='Email ...'>
         <input type='submit' value='submit' id='submit'>
+        
       </form>
+      <div id="products"></div>
+      <div id="prices"></div>
     </section>
 
     <!--
