--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
           </div>
         </div>
       </div>
-      <div id="prices">
+      <div  class="row" id="prices">
+        <p id="p1" class="col-xs-12"><span>$500</span></p>
+        <p id="p1"class="col-xs-12"><span>$300</span></p>
+        <p id="p1"class="col-xs-12"><span>$200</span></p>
 
       </div>
     </section>
